--- a/MY HTML PROJECT/Carousel slide/index.html
+++ b/MY HTML PROJECT/Carousel slide/index.html
@@ -8,37 +8,37 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 6</div>
-        <img src="Images/Benz1.webp" style="width: 100%" />
+        <img src="Benz1.webp" style="width: 100%" />
         <div class="text">Car One</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">2 / 6</div>
-        <img src="Images/benz2.webp" style="width: 100%" />
+        <img src="benz2.webp" style="width: 100%" />
         <div class="text">Car Two</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3 / 6</div>
-        <img src="Images/benz3.webp" style="width: 100%" />
+        <img src="benz3.webp" style="width: 100%" />
         <div class="text">Car Three</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">4 / 6</div>
-        <img src="Images/coolbenz.jpg" style="width: 100%" />
+        <img src="coolbenz.jpg" style="width: 100%" />
         <div class="text">Car Four</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">5 / 6</div>
-        <img src="Images/benz2.webp" style="width: 100%" />
+        <img src="benz2.webp" style="width: 100%" />
         <div class="text">Car Five</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">6 / 6</div>
-        <img src="Images/benz10.webp" style="width: 100%" />
+        <img src="benz10.webp" style="width: 100%" />
         <div class="text">Caption Six</div>
       </div>
 
